--- a/.classpath
+++ b/.classpath
@@ -5,13 +5,12 @@
 			<attribute name="ignore_optional_problems" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="D:/LIBRARIES/JAVA/32bit/swt/swt-4.6.3/swt.jar"/>
-	<classpathentry kind="lib" path="D:/PROJECTS/WorkingCopys/SVN/ImageProcessor/ext/32bit/org.eclipse.swt_3.103.2.v20150203-1313.jar"/>
-	<classpathentry kind="lib" path="D:/PROJECTS/WorkingCopys/SVN/ImageProcessor/ext/32bit/org.eclipse.swt.win32.win32.x86_3.103.2.v20150203-1351.jar"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/1.8.0_162 x64"/>
-	<classpathentry exported="true" kind="lib" path="D:/LIBRARIES/JAVA/64bit/swt/swt-4.6.3/swt.jar"/>
-	<classpathentry kind="lib" path="D:/PROJECTS/WorkingCopys/SVN/ImageProcessor/ext/64bit/org.eclipse.swt.gtk.linux.x86_64_3.103.2.v20150203-1351.jar"/>
-	<classpathentry kind="lib" path="D:/PROJECTS/WorkingCopys/SVN/ImageProcessor/ext/64bit/org.eclipse.swt_3.103.2.v20150203-1313.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/LIBRARIES/Java/x64/swt/swt.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/LIBRARIES/Java/x64/8u_311/lib/javafx-mx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
